Fixed preset button width and spacing

--- a/src/custom.css
+++ b/src/custom.css
@@ -148,7 +148,7 @@ body {
 
 /* Camera Control Presets  */
 .presetButton {
-    width: 9em;
+    width: 18vw;
     font-size: var(--font-size-2);
     height:calc(var(--font-size-4)*2.25);
 }
